TEST_PROGRAMS/INVALID/05/2d_array_var_dec_with_missing_type.go
/* 2D array variable declaration with missing type. */

package main

var m[26][43] // Error: Type missing (Looks like an array access).

func main() {
	// Do nothing.
}
